--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/archive">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -21,8 +20,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:tyrinfern@yahoo.com">email</a></li>
+	        		<li><a href="https://github.com/tyronetheartist">github.com/tyronetheartist</a></li>
 				</ul>
 			</footer>
 		</body>
